--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,24 +1,59 @@
 .main {
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.title {
-    font-size: xx-large;
 }
 .loginContainer {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
 }
 .imageContainer {
     background-image: url("/login.svg") ;
     background-repeat: no-repeat;
-    flex: 5;
+    background-position: center;
+    background-size: contain;
+    flex: 4;
 }
-.loginForm {
+.login {
     flex: 5;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.title {
+    font-size: xx-large;
+    flex: 1;
+}
+.loginForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 20%;
+    flex: 50;
+}
+.space {
+    flex: 1;
+}
+.inputHolder {
+    width: 50%;
+    font-size: large;
+    border-radius: 10px;
+    border-color: transparent;
+    background: none;
+    box-shadow: 0 4px 8px 0 rgba(59, 58, 114, 0.2), 0 6px 20px 0 rgba(34, 190, 170, 0.19);
+    margin: 10px;
+}
+.button{
+    width: 30%;
+    font-size: large;
+    margin-top: 10px;
+    background: none;
+    border-radius: 10px;
+    border-color: transparent;
+    box-shadow: 0 4px 8px 0 rgba(59, 58, 114, 0.2), 0 6px 20px 0 rgba(34, 190, 170, 0.19);
+}
+.button:hover{
+    background-color: darkgreen;
 }
