Minor change in header

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -5,7 +5,7 @@
     padding: 10px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    background-color: darkgreen;
+    background-color: cornflowerblue;
 }
 .icon {
     flex: 1;
