--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -71,3 +71,11 @@
     padding: 10px;
     margin: 10px;
 }
+.signupMessage {
+    margin-top: 20px;
+    font-size: large;
+}
+.signup {
+    text-decoration: underline;
+    color: cornflowerblue;
+}
