--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -1,9 +1,55 @@
 .main {
     height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.imageSection{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.divider{
+    height: 100%;
+}
+.details {
+    width: 50%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.imageIndicatorContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.textIndicator{
+    font-size: x-large;
+    padding: 5px;
+}
+.imageIndicator {
+    background: none;
+    border: none;
+    padding: 5px;
+    margin: 5px;
+    font-size: larger;
 }
 .title {
     font-size: xxx-large;
+    font-weight: bold;
+    color: darkslategrey;
+    margin: 10px;
+    padding: 10px;
+    padding: 10px;
 }
-.description {
-    font-size: xx-large;
+.description{
+    font-size: large;
+    margin: 10px;
+    padding: 10px;
 }
