--- a/src/styles/ProductOverview.module.css
+++ b/src/styles/ProductOverview.module.css
@@ -6,10 +6,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 2%;
     margin: 2%;
-    cursor: pointer;
+    transition-duration: 1s;
+}
+.main:hover{
+
+    box-shadow: 0 8px 16px 0 rgba(59, 58, 114, 0.2), 0 12px 40px 0 rgba(34, 190, 170, 0.19);
 }
 .image {
     margin: 6%;
+}
+.title {
+    cursor: pointer;
+    text-decoration: underline;
+    color: darkslategrey;
 }
