--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background-color: cornflowerblue;
+    background-color: var(--background-primary);
 }
 .brand {
     width: 50%;
