--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,11 +1,10 @@
 .main {
     display: flex;
     flex-direction: row;
-    box-shadow: 0 4px 8px 0 rgba(122, 210, 122, 0.16), 0 6px 20px 0 rgba(95, 255, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(80, 82, 80, 0.16), 0 6px 20px 0 rgba(171, 172, 170, 0.19);
     padding: 10px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    background-color: cornflowerblue;
 }
 .icon {
     flex: 1;
@@ -20,6 +19,7 @@
     border: none;
     border-radius: 20px;
     align-items: center;
+    background-color: gainsboro;
 }
 .info {
     flex: 2;
