--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -46,7 +46,7 @@
     color: darkslategrey;
     margin: 10px;
     padding: 10px;
-    padding: 10px;
+    text-decoration: underline;
 }
 .description{
     font-size: large;
