--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
   
   --foreground: #F5F9FC;
   --background-primary: yellow;
-  --background-secondary: #0A2540;
+  --background-secondary: rgb(80, 80, 7);
   --background-dark: #1C1C1C;
   --background-light: #535353;
 
