Change color theme (#68)
* Added global variables

* Change styling of footer and header

* Minor change

* Changes done in css

* Remove transition duration

* Chnage background images for login and sign up

* Added typewriter dependency

* Change search bar

* Chnage css

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background-color: cornflowerblue;
+    background-color: var(--background-primary);
 }
 .brand {
     width: 50%;
@@ -28,11 +28,8 @@
     font-size: large;
 }
 .link{
-    background-color: darkcyan;
     padding: 5px;
-    border-radius: 5px;
-    transition-duration: 200ms;
 }
 .link:hover {
-    background-color: seagreen;
-}
+    text-decoration: underline;
+}   
