--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -12,8 +12,13 @@
     align-items: center;
     justify-content: center;
 }
-.divider{
+.vertical_divider{
     height: 100%;
+    color: rgb(242, 242, 242);
+}
+.horizontal_divider{
+    width: 90%;
+    color: rgb(242, 242, 242);
 }
 .details {
     width: 50%;
@@ -21,7 +26,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 .imageIndicatorContainer {
     display: flex;
@@ -47,8 +51,44 @@
     margin: 10px;
     padding: 10px;
 }
-.description{
-    font-size: large;
+.descriptionContainer{
+    display: flex;
+    width: 100%;
     margin: 10px;
     padding: 10px;
+    align-items: center;
+}
+.descriptionTitle {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-decoration: underline;
+    font-size: large;
+}
+.description {
+    flex: 4;
+}
+.cartContainer {
+    margin: 2%;
+    cursor: pointer;
+    font-size: x-large;
+    padding: 1% 3%;
+    /*border: 1px solid;*/
+    border-image-slice: 1;
+    border-image-source: var(--border-gradient);
+    border-width: 1px;
+    border-style: solid;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cartHolder {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
