--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -73,8 +73,7 @@
     margin: 2%;
     cursor: pointer;
     font-size: x-large;
-    padding: 1% 3%;
-    /*border: 1px solid;*/
+    /*padding: 1% 3%;*/
     border-image-slice: 1;
     border-image-source: var(--border-gradient);
     border-width: 1px;
@@ -90,5 +89,25 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
+    justify-content: center;
+}
+.quantity {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cartButton {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.red_background {
+    background: linear-gradient(90deg, red, transparent);
+}
+.green_background {
+    background: linear-gradient(90deg, transparent, green);
 }
