--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -43,6 +43,10 @@
     padding: 5px;
     margin: 5px;
     font-size: larger;
+    cursor: pointer;
+}
+.imageIndicator:hover {
+    color: var(--background-primary);
 }
 .title {
     font-size: xxx-large;
@@ -50,6 +54,9 @@
     color: darkslategrey;
     margin: 10px;
     padding: 10px;
+}
+.title:hover {
+    text-decoration: underline;
 }
 .descriptionContainer{
     display: flex;
