--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -35,6 +35,17 @@
 }
 .space {
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+
+    background-image: var(--gradient-primary);
+    background-clip: text;
+    color: transparent;
+    background-size: 300% 100%;
+    animation: animateBg 5s infinite alternate-reverse;
 }
 .inputHolder {
     width: 50%;
@@ -55,9 +66,20 @@
     box-shadow: 0 4px 8px 0 rgba(59, 58, 114, 0.2), 0 6px 20px 0 rgba(34, 190, 170, 0.19);
 }
 .button:hover{
-    background-color: darkgreen;
+    background: var(--gradient-primary);
+    background-size: 300% 100%;
+    animation: animateBg 1s infinite alternate;
     color: white;
 }
+@keyframes animateBg {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 100% 0;
+    }
+}
+
 .messageError {
     color: red;
     padding: 10px;
