--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@
   --background-secondary: rgb(80, 80, 7);
   --background-dark: #1C1C1C;
   --background-light: #535353;
+  --title-color: darkslategrey;
   --primary-text-color: darkslategrey;
   --gradient-primary: linear-gradient(90deg, #735DF0, #FA4197, #0BCDFA);
   --gradient-secondary: linear-gradient(180deg, rgba(250,65,151,0.5187324929971988) 0%, rgba(255,255,255,0.3842787114845938) 19%);
@@ -54,7 +55,7 @@ a {
             rgba(1, 65, 255, 0),
             rgba(1, 65, 255, 0.3)
     );
-
+    --title-color: white;
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
     --tile-border: conic-gradient(
