Change search bar background color

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -19,7 +19,7 @@
     flex: 5;
     border: none;
     border-radius: 20px;
-    background-color: gainsboro;
+    background-color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
