--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -79,7 +79,6 @@
 .cartContainer {
     cursor: pointer;
     font-size: x-large;
-    /*padding: 1% 3%;*/
     border-image-slice: 1;
     border-image-source: var(--border-gradient);
     border-width: 1px;
@@ -103,6 +102,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--background-light);
+    color: var(--primary-text-color);
 }
 .likeCartContainer {
     width: 100%;
@@ -117,6 +118,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    border: none;
 }
 .red_background {
     background: linear-gradient(90deg, red, transparent);
