--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -1,5 +1,5 @@
 .main {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -11,6 +11,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.image {
+    width: 500px;
+    height: 500px;
 }
 .vertical_divider{
     height: 100%;
@@ -132,4 +136,32 @@
     display: flex;
     align-items: center;
     justify-items: center;
+}
+@media (width <= 1000px) {
+    .main {
+        flex-direction: column;
+    }
+    .vertical_divider{.details {
+        width: 50%;
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+        width: 100%;
+        color: rgb(242, 242, 242);
+    }
+    .horizontal_divider{
+        width: 100%;
+        color: rgb(242, 242, 242);
+    }
+    .details {
+        width: 100%;
+    }
+    @media (width <= 500px) {
+        .image {
+            width: 400px;
+            height: 400px;
+        }
+    }
 }
