--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -2,10 +2,10 @@
     min-height: 100vh;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
 }
 .imageSection{
-    height: 100%;
+    height: 100vh;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
     height: 500px;
 }
 .vertical_divider{
-    height: 100%;
+    height: 100vh;
     color: rgb(242, 242, 242);
 }
 .horizontal_divider{
@@ -141,19 +141,22 @@
     .main {
         flex-direction: column;
     }
-    .vertical_divider{.details {
+    .imageSection {
+        width: 100%;
+        height: 50%;
+    }
+    .details {
         width: 50%;
         min-height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-        width: 100%;
-        color: rgb(242, 242, 242);
+    .vertical_divider{
+        display: none;
     }
     .horizontal_divider{
-        width: 100%;
-        color: rgb(242, 242, 242);
+        display: none;
     }
     .details {
         width: 100%;
@@ -162,6 +165,12 @@
         .image {
             width: 400px;
             height: 400px;
+        }
+    }
+    @media (width <=450px) {
+        .image {
+            width: 300px;
+            height: 300px;
         }
     }
 }
