--- a/src/styles/ProductOverview.module.css
+++ b/src/styles/ProductOverview.module.css
@@ -1,12 +1,13 @@
 .main {
     box-shadow: 0 4px 8px 0 rgba(59, 58, 114, 0.2), 0 6px 20px 0 rgba(34, 190, 170, 0.19);
-    width: 20vw;
+    width: 100%;
     height: 30vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     margin: 2%;
+    padding: 50px;
 }
 .main:hover{
     box-shadow: 0 8px 16px 0 rgba(59, 58, 114, 0.2), 0 12px 40px 0 rgba(34, 190, 170, 0.19);
@@ -14,7 +15,12 @@
     border-image-slice: 1;
     border-image-source: var(--border-gradient);
 }
-
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
 .image {
     margin: 6%;
 }
