--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -153,7 +153,10 @@
     /* flex: 1; */
 }
 .reviews {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 @media (width <= 1000px) {
     .main {
