--- a/src/styles/review.module.css
+++ b/src/styles/review.module.css
@@ -4,6 +4,11 @@
     flex-direction: row;
     margin: 10px;
     padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(59, 58, 114, 0.2), 0 6px 20px 0 rgba(34, 190, 170, 0.19);
+    transition-duration: 500ms;
+}
+.main:hover {
+    box-shadow: 0 8px 16px 0 rgba(59, 58, 114, 0.2), 0 12px 40px 0 rgba(34, 190, 170, 0.19);
 }
 .user {
     flex: 1;
@@ -13,10 +18,10 @@
     align-items: center;
 }
 .review {
+    margin: 10px;
     flex: 4;
     display: flex;
     flex-direction: column;
-    background-color: rebeccapurple;
 }
 .title {
     width: 100%;
