--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -6,7 +6,7 @@
 }
 .imageSection{
     height: 100vh;
-    width: 50%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +25,7 @@
     color: rgb(242, 242, 242);
 }
 .details {
-    width: 50%;
+    width: 100%;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -136,6 +136,27 @@
     display: flex;
     align-items: center;
     justify-items: center;
+}
+.rightContainer {
+    height: 100vh;
+    width: 100%;
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+}
+.upperContainer {
+    width: 100%;
+    /* flex: 1; */
+}
+.lowerContainer {
+    overflow-y: scroll;
+    /* flex: 1; */
+}
+.reviews {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 @media (width <= 1000px) {
     .main {
