--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -175,6 +175,23 @@
 .floatingButton:hover {
     box-shadow: 0 8px 16px 0 rgba(59, 58, 114, 0.2), 0 12px 40px 0 rgba(34, 190, 170, 0.19);
 }
+.reviewDialog {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 10%;
+    background-color: var(--background);
+}
+.closeDialog {
+    cursor: pointer;
+    font-size: xx-large;
+    font-weight: bolder;
+    color: var(--background-primary);
+    width: fit-content;
+    margin: 5px;
+}
 @media (width <= 1000px) {
     .main {
         flex-direction: column;
