--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -189,8 +189,61 @@
     font-size: xx-large;
     font-weight: bolder;
     color: var(--background-primary);
-    width: fit-content;
     margin: 5px;
+}
+.mainReviewDialog {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: var(--background);
+}
+.leftDialogContainer {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.rightDialogContainer {
+    flex: 4;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.lowerDialogContainer {
+    width: 100%;
+    height: 100%;
+}
+.middleDialogContainer {
+    width: 100%;
+    height: 100%;
+}
+.upperDialogContainer {
+    width: 100%;
+    height: 100%;
+}
+.input {
+    width: 100%;
+    height: 100%;
+    background-color: var(--background);
+}
+.reviewSubmit {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--background);
+}
+.button {
+    background-color: var(--background-primary);
+    font-size: xx-large;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 40px;
 }
 @media (width <= 1000px) {
     .main {
