--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -244,6 +244,7 @@
     margin: 10px;
     padding: 10px;
     border-radius: 40px;
+    cursor: pointer;
 }
 @media (width <= 1000px) {
     .main {
