--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -151,12 +151,22 @@
 .lowerContainer {
     overflow-y: scroll;
     /* flex: 1; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .reviews {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.loadReviews {
+    text-align: center;
+    color: var(--background-primary);
+    cursor: pointer;
+    font-size: larger;
+    margin: 10px;
 }
 .floatingButton {
     position: fixed;
