Update login page css

--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -30,6 +30,13 @@
     text-align: center;
     flex: 1;
 }
+.space {
+    color: transparent;
+    background: var(--gradient-primary);
+    background-clip: text;
+    background-size: 300% 100%;
+    animation: animateBg 2s infinite alternate-reverse;
+}
 .loginForm{
     display: flex;
     flex-direction: column;
@@ -39,43 +46,28 @@
     height: 20%;
     flex: 50;
 }
-.space {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-
-    background-image: var(--gradient-primary);
-    background-clip: text;
-    color: transparent;
-    background-size: 300% 100%;
-    animation: animateBg 5s infinite alternate-reverse;
-}
-.inputHolder {
+.loginButton {
+    cursor: pointer;
     width: 50%;
-    font-size: large;
-    border-radius: 10px;
-    border-color: transparent;
-    background: none;
-    box-shadow: 0 4px 8px 0 rgba(59, 58, 114, 0.2), 0 6px 20px 0 rgba(34, 190, 170, 0.19);
+    border-radius: 50px;
+    padding: 10px;
     margin: 10px;
-}
-.button{
-    width: 30%;
-    font-size: large;
-    margin-top: 10px;
-    background: none;
-    border-radius: 10px;
-    border-color: transparent;
     box-shadow: 0 4px 8px 0 rgba(59, 58, 114, 0.2), 0 6px 20px 0 rgba(34, 190, 170, 0.19);
+    display: flex;   
 }
-.button:hover{
-    background: var(--gradient-primary);
-    background-size: 300% 100%;
-    animation: animateBg 1s infinite alternate;
-    color: white;
+.loginButton:hover {
+    box-shadow: 0 8px 16px 0 rgba(59, 58, 114, 0.2), 0 12px 40px 0 rgba(34, 190, 170, 0.19);
+}
+.brand_icon_container {
+    flex: 1 ;
+}
+.brand_icon {
+    height: 30px;
+    margin: 5px;
+}
+.loginTitle {
+    flex: 5;
+    font-size: xx-large;
 }
 @keyframes animateBg {
     0% {
@@ -84,27 +76,4 @@
     100% {
         background-position: 100% 0;
     }
-}
-
-.messageError {
-    color: red;
-    padding: 10px;
-    margin: 10px;
-}
-.messageSuccess {
-    color: green;
-    padding: 10px;
-    margin: 10px;
-}
-.messageLoading {
-    padding: 10px;
-    margin: 10px;
-}
-.signupMessage {
-    margin-top: 20px;
-    font-size: large;
-}
-.signup {
-    text-decoration: underline;
-    color: cornflowerblue;
 }
