--- a/src/styles/Like.module.css
+++ b/src/styles/Like.module.css
@@ -2,6 +2,24 @@
     min-height: 100vh;
     color: white;
     display: grid;
-    align-content: center;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    justify-content: space-evenly;
+}
+@media (width <= 1400px) {
+    .main {
+        grid-template-columns: auto auto auto;
+    }
+}
+@media (width <= 1100px) {
+    .main {
+        grid-template-columns: auto auto;
+    }
+}
+@media (width <= 700px) {
+    .main {
+        grid-template-columns: auto;
+    }
 }
